--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -10,6 +10,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<!-- testing commits and branches -->
 	{% block content %}{% endblock %}
 	{% include 'main.html' %}
 </body>
