--- a/shop/static/styles/style.css
+++ b/shop/static/styles/style.css
@@ -120,79 +120,12 @@ header .title {
 }
 /*______________________________________*/
 
-/* Maruee section */
-.marquee {
-	margin-top: 200px;
-}
-.marquee h3 {
-	font-size: 45px;
-	text-transform: uppercase;
-	font-family: Impact;
-	font-weight: normal;
-	line-height: 30px;
-}
-.marquee h4 {
-	font-size: 25px;;
-	font-family: Impact;
-	font-weight: 100;
-	opacity: 0.5;
-}
-.marquee-repeat {
-	animation: scroll 20s linear 0s infinite;
-}
-
-@-webkit-keyframes scroll {
-    0% {
-        -webkit-transform: translate(100%, 0);
-        transform: translate(100%, 0);
-    }
-    100% {
-        -webkit-transform: translate(-100%, 0);
-        transform: translate(-100%, 0)
-    }
-}
- 
-@-moz-keyframes scroll {
-    0% {
-        -moz-transform: translate(100%, 0);
-        transform: translate(100%, 0);
-    }
-    100% {
-        -moz-transform: translate(-100%, 0);
-        transform: translate(-100%, 0)
-    }
-}
- 
-@keyframes scroll {
-    0% {
-        transform: translate(100%, 0);
-    }
-    100% {
-        transform: translate(-100%, 0)
-    }
-}
- 
-.marquee-repeat {
-    display: block;
-    width: 100%;
-    white-space: nowrap;
-}
- 
-.marquee-repeat span {
-    display: inline-block;
-    padding-left: 100%;
-    -webkit-animation: scroll 5s infinite linear;
-    -moz-animation: scroll 5s infinite linear;
-    animation: scroll 5s infinite linear;
-}
-/*______________________________________*/
-
 /* Main Content */
 .container {
 	width: 68.75%;
-	height: 2000px;
+	height: 2420px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 400px; /* Было 100px */
 	display: flex;
 }
 .column_1, .column_2 {
@@ -202,7 +135,7 @@ header .title {
 	flex-direction: column;
 	align-items: center;
 }
-.column_1 { justify-content: space-between; }
+.column_1 { justify-content: start; gap: 300px }
 .column_2 { justify-content: space-around; }
 
 .spec-product {
@@ -318,3 +251,71 @@ header .title {
 	width: 615px;
 	text-align: right;
 }
+
+
+
+
+/* endless */
+.marquee-left {;
+  margin-top: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+.marquee-left span {
+  	display: inline-block;
+  	padding-left: 100%;
+  	animation: marquee-left 20s linear infinite;
+
+  	font-size: 45px;
+  	text-transform: uppercase;
+	font-family: Impact;
+	font-weight: normal;
+}
+.marquee2-left span {
+  animation-delay: 10s;
+}
+@keyframes marquee-left {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
+/* _______ */
+
+
+
+
+/* Right endless */
+.marquee-right {;
+  margin-top: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+.marquee-right span {
+  	display: inline-block;
+  	padding-left: 100%;
+  	animation: marquee-right 20s linear infinite;
+
+  	font-size: 35px;
+	font-family: Impact;
+	font-weight: normal;
+	opacity: 0.5;
+}
+.marquee2-right span {
+  animation-delay: 10s;
+}
+@keyframes marquee-right {
+  0% {
+    transform: translate(-100%, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+/* _____________ */
