--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -26,12 +26,33 @@
 		<div class="rectangle2 second-rect"></div>
 	</div>
 
+<!--
 	<section>
 		<div class="marquee">
 			<h3 class="marquee-repeat marquee-repeat-bigger"><span>new arrivals 新着</span></h3>
 			<h4 class="marquee-repeat marquee-repeat-smaller">new arrivals 新着</h4>
 		</div>
 	</section>
+-->
+	<section>
+		<p class="marquee-left">
+			<span>new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着</span>
+		</p>
+		<p class="marquee-left marquee2-left">
+			<span>new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着</span>
+		</p>
+	</section>
+
+	<section>
+		<p class="marquee-right">
+			<span>new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals</span>
+		</p>
+		<p class="marquee-right marquee2-right">
+			<span>new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals</span>
+		</p>
+	</section>
+
+
 	<script>
 		Array.from(document.getElementsByClassName('rect-content')).forEach(function(el) {
 			el.innerText = (el.innerText + ' ').repeat(15);
