--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -36,10 +36,10 @@
 -->
 	<section>
 		<p class="marquee-left">
-			<span>new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着</span>
+			<span>arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new </span>
 		</p>
 		<p class="marquee-left marquee2-left">
-			<span>new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着</span>
+			<span> arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new arrivals 新着 new </span>
 		</p>
 	</section>
 
